tests/spec/compile-fail/020_mut_self_requires_writable_receiver.zn
// category: compile-fail
// profile: freestanding
// purpose: mut self methods require writable receivers

module tests.fail.mutSelfRequiresWritableReceiver;

struct Counter {
    value: U32,
}

impl Counter {
    fn bump(mut self) {
        self.value = self.value + 1;
    }
}

fn main() {
    let counter = Counter { value: 1 };
    mut counter.bump(); // expected-error: mut self method requires writable receiver
}
